--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "postcss": "^8.5.4",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@angular/build": "^20.0.1",
